Shopping cart manipulation and icon

--- a/Sportstore/Sportstore.csproj
+++ b/Sportstore/Sportstore.csproj
@@ -20,7 +20,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <_ContentIncludedByDefault Remove="Views\Shared\Components\CartSummary\Default.cshtml" />
     <_ContentIncludedByDefault Remove="Views\Shared\ProductSummary.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Views\Shared\Components\CartSummary\Default.cshtml" />
   </ItemGroup>
 
 </Project>
